--- a/client/index.html
+++ b/client/index.html
@@ -65,28 +65,28 @@ Password:<input type="password" class="form-control"id="signDiv-password" type="
                             <p style="font-size:20px">agility ☆☆☆☆☆</p>
                         </div>
                         </div>
-                        <button class="btn btn-warning"id="choose-fighter"style="width:600px"><strong>Choose</strong></button>
+                        <button class="btn btn-warning"id="choose-fighter"style="width:80%"><strong>Choose</strong></button>
                         <p id="info"style="position:absolute"></p>
                         </div>
             <div class="bg-menu" id="menu2" style="display:none">
-        Choose a chapter
+
         <div class="row">
-        <div class="column-2">
+        <div class="column-2" style="position:absolute;top:-400%;left:60%">
             <img src="client/img/map.png" id="green" width="150"height="150">
-            <p> green</p>
+            <p> Level1</p>
         </div>
-        <div class="column-2">
+        <div class="column-2" style="position:absolute;top:-90%;left:50%;">
         <img src="client/img/map2.png" id="blood"width="150"height="150">
-            <p> bloodshed otago </p>
+            <p> Level2 </p>
         </div>
-        <div class="column-2">
+        <div class="column-2" style="position:absolute;top:300%;left:70%;">
         <img src="client/img/map3.png" id="white"width="150"height="150">
-            <p> white </p>
+            <p> Level3 </p>
         </div>
         </div>
-        <button class="btn btn-warning"id="start-game"style="width:600px"><strong>Begin</strong></button>
+        <button class="btn btn-warning"id="start-game"style="position:absolute;left:0%;top:600%;width:100%;font-size:40px"><strong>Begin </button>
+            </div>
         <p id="info"style="position:absolute"></p>
-        </div>  
 </div>
 
 
@@ -99,17 +99,23 @@ Password:<input type="password" class="form-control"id="signDiv-password" type="
 <script src="client/js/Enemies.js"></script>
 <script src="client/js/load_Images.js"></script>
 <script src="client/js/Enemy_Entity.js"></script>
+<script src="client/js/Boss.js"></script>
 <script src="client/Games/mission1.js"></script>
+<script src="client/Games/mission2.js"></script>
+<script src="client/Games/mission3.js"></script>
 <script>
     var WIDTH = 800;
     var HEIGHT = 800;
      var socket = io();
-     var theplayer = Player();
-   
+  var theplayer = Player();
+  local_progress = {
+      "mission1":true,
+      "mission2":false,
+      "mission3":false,
+  };
 var toMenu = function(){
     showScreen(2);
   }
-
     var signDiv = document.getElementById('signDiv');
     var signDivUsername = document.getElementById('signDiv-username');
     var signDivSignIn = document.getElementById('signDiv-signIn');
