--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@ Password:<input type="password" class="form-control"id="signDiv-password" type="
     <a id="highscore_menu">highscores</a>
     <a id="setting_menu">settings</a>
     <a id="credits_menu">credits</a>
+    <a onclick="levelmaker()" id="levelmaker_menu">levelmaker</a>
     </div>
 </div>
 
@@ -96,9 +97,9 @@ Password:<input type="password" class="form-control"id="signDiv-password" type="
 <script src="client/js/switch_screen.js"></script>
 <script src="client/js/newgame.js"></script>
 <script src="client/js/onclicks.js"></script>
+<script src="client/js/Enemy_Entity.js"></script>
 <script src="client/js/Enemies.js"></script>
 <script src="client/js/load_Images.js"></script>
-<script src="client/js/Enemy_Entity.js"></script>
 <script src="client/js/Boss.js"></script>
 <script src="client/Games/mission1.js"></script>
 <script src="client/Games/mission2.js"></script>
